backport more to java 1.8 #32