@@ -20,6 +20,7 @@ import de.bixilon.minosoft.data.commands.parser.properties.ParserProperties;
 import de.bixilon.minosoft.data.commands.parser.properties.StringParserProperties;
 import de.bixilon.minosoft.protocol.network.connection.play.PlayConnection;
 import de.bixilon.minosoft.protocol.protocol.InByteBuffer;
+import org.apache.commons.lang3.StringUtils;
 
 public class StringParser extends CommandParser {
     public static final StringParser STRING_PARSER = new StringParser();
@@ -47,7 +48,7 @@ public class StringParser extends CommandParser {
                 throw new IllegalStateException();
         }
 
-        if (!stringParserProperties.isAllowEmptyString() && string.isBlank()) {
+        if (!stringParserProperties.isAllowEmptyString() && StringUtils.isBlank(string)) {
             throw new BlankStringCommandParseException(stringReader, string);
         }
         return string;
